# hdns

./: .dir-locals.el  .gitignore  .travis.yml  hdns.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Server.hs
test/: Spec.hs
