name:                hdns
version:             0.1.0.0
synopsis:            Learning Haskell with a DNS thingy
-- description:
homepage:            https://github.com/ibawt/hdns#readme
license:             GPL-3
license-file:        LICENSE
author:              Ian Quick
maintainer:          ian.quick@gmail.com
copyright:           2017 Ian Quick
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , binary-strict
                     , binary
                     , bytestring
                     , unordered-containers
                     , random
                     , stm
                     , network >= 2.6
                     , mtl
  default-language:    Haskell2010

executable hdns-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hdns
  default-language:    Haskell2010

test-suite hdns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hdns
                     , bytestring
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibawt/hdns
